# fastbinaryformatter

./: README.md
lib/: CMakeLists.txt
lib/src/: .fastbinaryformatter.cpp.kate-swp  fastbinaryformatter.cpp  fastbinaryformatter.hpp
simple/: CMakeLists.txt
simple/src/: fastbinaryformatter.hpp  main.cpp
